tests/cases/smoke/invalid/func_missing_return_path.dp
func maybe_add(a: int, b: int) -> int {
    if a > 0 {
        return a + b
    }
}
